--- a/Assignment/starter_code/blog.html
+++ b/Assignment/starter_code/blog.html
@@ -16,6 +16,9 @@
 		<header>
 			<div class="container">
 				<h1 class="logo">Relaxr</h1>
+				<div class='mobile-nav'>
+				<i id='hamburger-button'class="fa fa-bars" aria-hidden="true"></i>
+				</div>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
