--- a/Assignment/starter_code/index.html
+++ b/Assignment/starter_code/index.html
@@ -10,15 +10,14 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
+		<script src='js/index.js'></script>
 
 	</head>
 	<body>
 		<header>
 			<div class="container">
 				<h1 class="logo">Relaxr</h1>
-				<div class='mobile-nav'>
-				<i id='hamburger-button'class="fa fa-bars" aria-hidden="true"></i>
-				</div>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -27,6 +26,9 @@
 						<li><a href="blog.html">Blog</a></li>
 					</ul>
 				</nav>
+				<div class='mobile-nav'>
+				<i id='hamburger-button'class="fa fa-bars" aria-hidden="true"></i>
+				</div>
 			</div>
 		</header>
 		<section id="hero">
