--- a/Assignment/starter_code/blog.html
+++ b/Assignment/starter_code/blog.html
@@ -6,19 +6,19 @@
 
 		<title>Relaxr Blog</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300,600,800' rel='stylesheet' type='text/css'>
-
+		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="https://code.jquery.com/jquery-3.1.1.js"   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="   crossorigin="anonymous"></script>
+		<script src='js/index.js'></script>
 
 	</head>
 	<body>
 		<header>
 			<div class="container">
 				<h1 class="logo">Relaxr</h1>
-				<div class='mobile-nav'>
-				<i id='hamburger-button'class="fa fa-bars" aria-hidden="true"></i>
-				</div>
+
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -27,6 +27,9 @@
 						<li><a href="blog.html">Blog</a></li>
 					</ul>
 				</nav>
+				<div class='mobile-nav'>
+				<i id='hamburger-button'class="fa fa-bars" aria-hidden="true"></i>
+				</div>
 			</div>
 		</header>
 		<section id="main">
@@ -48,6 +51,7 @@
 					</article>
 				</section><!--
 			--><aside id="sidebar">
+					<div class='sub-categories'>
 					<h3>Categories</h3>
 					<ul>
 						<li><a href="#">Success stories</a></li>
@@ -56,10 +60,15 @@
 						<li><a href="#">Best of</a></li>
 						<li><a href="#">Business tips</a></li>
 					</ul>
+				</div>
+				<div class='sub-categories'>
 					<h3>About Relaxr</h3>
 					<p>Proin sed justo vel sapien varius auctor. Proin scelerisque massa at luctus tincidunt. Fusce porttitor, sapien sed tincidunt fringilla.<br>
 					<a href="">Learn More</a></p>
+				</div>
+				<div class='sub-categories'>
 					<img src="images/ad-unit.png" alt="Ad Unit">
+				</div>
 				</aside>
 			</div>
 		</section>
